<resources>
    <string name="app_name">Tele Medic</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


    <string name="action_settings">Settings</string>

    <string name="hint_name">Full Name</string>

    <string name="hint_password">Password</string>
    <string name="btn_sign_in">Sign IN</string>

    <string name="err_msg_name">Enter your full name</string>

    <string name="err_msg_password">Enter the password</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Doctors List</string>
    <string name="nav_item_notifications">About Us</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_aboutus">About Us</string>
    <string name="title_doctors">Doctors with us</string>
    <string name="title_home">Home</string>
    <string name="patient">Patient</string>
    <string name="teleuser">Vendor</string>
    <string name="doctor">Doctor</string>

    <string name="nav_item_patient">Patient List</string>
    <string name="nav_item_doctor_info">Detail</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels1">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_patient</item>
        <item>@string/nav_item_doctor_info</item>
    </string-array>
</resources>