<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/static_txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="Login"
            android:textColor="#218eed"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/static_txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/static_txt1"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="#218eed"
            android:textSize="35sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/s_imageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/static_txt2"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/tele" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/s_imageview"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_name"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_password"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/s_radiobtn1"
                style="@style/MyMaterialTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Teleuser"
                android:padding="10dp"/>

            <RadioButton
                android:id="@+id/s_radiobtn3"
                style="@style/MyMaterialTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Doctor"
                android:padding="10dp"/>

            <RadioButton
                android:id="@+id/s_radiobtn4"
                style="@style/MyMaterialTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Patient"
                android:padding="10dp"/>
        </RadioGroup>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/users"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_sign_in"
            android:textColor="@android:color/white" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_signup"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:padding="15dp">

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Register a new user"
                android:textSize="15dp"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>


    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>